# mdtf_test_data

./: README.md  ref_synth_dset.pkl  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
ci/: environment.yml
config/: ncar_1hr.yml  ncar_mon.yml
mdtf_data_decimator/: __init__.py  coarseners.py  synthetic.py
mdtf_test_data/: __init__.py  mdtf_synthetic.py
mdtf_test_data/coarsen/: __init__.py
mdtf_test_data/config/: cmip_day.yml  cmip_mon.yml  gfdl_day.yml  ncar_3hr.yml  ncar_day.yml
mdtf_test_data/generators/: __init__.py  convective.py  normal.py
mdtf_test_data/random/: __init__.py
mdtf_test_data/resources/: ocean_static_5deg.nc
mdtf_test_data/synthetic/: __init__.py  synthetic.py  synthetic_data.py  synthetic_setup.py  test_synthetic_data.py
mdtf_test_data/synthetic/horizontal/: __init__.py  construct_rect_grid.py  construct_tripolar_grid.py
mdtf_test_data/synthetic/time/: __init__.py  time.py
mdtf_test_data/synthetic/vertical/: __init__.py  cmip_vertical_coord.py  gfdl_plev19_vertical_coord.py  gfdl_vertical_coord.py  mom6_rho2_coord.py  mom6_z_coord.py  ncar_hybrid_coord.py
mdtf_test_data/tests/: ref_synth_dset.nc  test_construct_rect_grid.py  test_construct_tripolar_grid.py  test_generators.py  test_random.py  test_synthetic_data.py
mdtf_test_data/util/: __init__.py  cli.py  mdtf-coarsen.py  mdtf_src_query.py  rectilinear.py
scripts/: gfdl_synthetic.py  mdtf-coarsen  mdtf-coarsen.py  mdtf_synthetic.py  ncar_synthetic.py
