[metadata]
name = mdtf_test_data
version = 1.0.7
description = Tools for working with MDTF Diagnostics test data sets
url = https://github.com/jkrasting/mdtf_test_data
author = MDTF Development Team
author_email = oar.gfdl.mdtf@noaa.gov
keywords = process-oriented diagnostics climate weather mdtf
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    License :: Public Domain
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
long_description_content_type=text/x-rst
long_description =
    **mdtf_test_data** is a Python package in the public domain
    that processes and generates coarse-resolutions datasets
    that are suitable for testing process-oriented diagnostics
    that are part of the `Model Diagnostics Task Force Package 
    <https://github.com/NOAA-GFDL/MDTF-diagnostics>`_.

    The package provides two types of functionality:

    1. Coarsening the horizontal resolution of existing data
    2. Generating synthetic NCAR or GFDL-formatted data

    More Information
    ----------------
    - Source code: `<http://github.com/jkrasting/mdtf_test_data>`_

[options]
packages = find:
zip_safe = False
include_package_data = True
python_requires = >=3.7
scripts = 
    scripts/mdtf_synthetic.py
install_requires =
    cftime
    envyaml
    netcdf4
    numpy>=1.17
    xarray>=0.17.0

[options.package_data]
mdtf_test_data =
    config/*
    tests/*
    resources/*
